--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   local_auth: ^0.6.3+4
   path_provider: ^2.0.1
   shared_preferences: ^2.0.3
+  splashscreen: ^1.3.5
   toast: ^0.1.5
 
 dev_dependencies:
@@ -55,7 +56,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/fin.png
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
