--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   infinity_page_view: ^1.0.0
   local_auth: ^0.6.3+4
   path_provider: ^2.0.1
+  location_permissions : any
   shared_preferences: ^2.0.3
   splashscreen: ^1.3.5
   toast: ^0.1.5
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
