--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   imei_plugin: ^1.2.0
   infinity_page_view: ^1.0.0
   local_auth: ^0.6.3+4
+  location_permissions: any
   path_provider: ^2.0.1
-  location_permissions : any
+  pin_code_fields: ^7.0.0
   shared_preferences: ^2.0.3
   splashscreen: ^1.3.5
   toast: ^0.1.5
