--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_lock_screen: ^1.0.8
   flutter_swiper: ^1.1.6
   geolocator: ^6.2.0
+  google_fonts: ^1.0.0
   http: ^0.12.2
   image_picker: ^0.6.7+22
   imei_plugin: ^1.2.0
@@ -36,6 +37,7 @@ dependencies:
   local_auth: ^0.6.3+4
   location_permissions: any
   path_provider: ^2.0.1
+  permission_handler: any
   pin_code_fields: ^7.0.0
   shared_preferences: ^2.0.3
   splashscreen: ^1.3.5
