--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:requestLegacyExternalStorage="true"
-        android:label="flutter_app"
+        android:label="NRC"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
