--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,27 +21,31 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cupertino_icons: ^1.0.0
   exif: ^1.0.3
+  flutter:
+    sdk: flutter
   flutter_form_builder: ^4.2.0
+  flutter_hooks: ^0.16.0
   flutter_lock_screen: ^1.0.8
   flutter_swiper: ^1.1.6
-  geolocator: ^6.2.0
+  geolocator: ^6.2.1
   google_fonts: ^1.0.0
-  http: ^0.12.2
+  hooks_riverpod: ^0.12.4
   image_picker: ^0.6.7+22
   imei_plugin: ^1.2.0
   infinity_page_view: ^1.0.0
   local_auth: ^0.6.3+4
+  dio_http_cache: ^0.2.11
   location_permissions: any
   path_provider: ^2.0.1
   permission_handler: any
   pin_code_fields: ^7.0.0
+  flutter_secure_storage: ^4.2.1
   shared_preferences: ^2.0.3
   splashscreen: ^1.3.5
   toast: ^0.1.5
+  connectivity_plus: ^0.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
