--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,9 @@
 name: flutter_app
 description: A new Flutter application.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+
 version: 1.4.3+3
 
 environment:
@@ -30,7 +19,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   geolocator: ^6.2.0
   google_fonts: ^1.0.0
-  http: ^0.12.2
+  dio_http_cache: ^0.2.11
   image_picker: ^0.6.7+22
   imei_plugin: ^1.2.0
   infinity_page_view: ^1.0.0
@@ -48,14 +37,10 @@ dev_dependencies:
 
 dependency_overrides:
   intl: ^0.17.0
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter.
+
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
