--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   shared_preferences: ^2.0.3
   splashscreen: ^1.3.5
   toast: ^0.1.5
+  connectivity_plus: ^0.8.1
+  hooks_riverpod: ^0.12.4
+  flutter_secure_storage: ^4.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
