--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   connectivity_plus: ^0.8.1
   hooks_riverpod: ^0.12.4
   flutter_secure_storage: ^4.2.1
+  cached_network_image: ^2.5.1
+  flutter_cache_manager: ^2.1.2
 
 dev_dependencies:
   flutter_test:
